--- a/pub/index.html
+++ b/pub/index.html
@@ -75,7 +75,7 @@
 					<button type="button" class="btn btn-default" onclick="javascript:up();"><span class="glyphicon glyphicon-volume-up"></span></button>
 				</div>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default" onclick="javascript:list();"><span class="glyphicon glyphicon-list"></span></button>
+					<button type="button" class="btn btn-default" onclick="javascript:audiolist();"><span class="glyphicon glyphicon-list"></span></button>
 				</div>
 			</div>
     </div>
