--- a/pub/index.html
+++ b/pub/index.html
@@ -397,7 +397,7 @@
 					<div class="panel-heading">
 						<strong>{{r}}</strong>
 						<a data-action="log" href="javascript:void(0);" class="action btn btn-default btn-xs"><span class="glyphicon glyphicon-list"></span></a>
-						<span class="pull-right">{{b}}</span>
+						<a data-action="push" href="javascript:void(0);" class="action pull-right">{{b}}</a>
 					</div>
 					<div class="panel-body">
 						<div class="row">
