--- a/pub/index.html
+++ b/pub/index.html
@@ -428,7 +428,8 @@
 					<div class="panel-heading">
 						<strong>{{r}}</strong>
 						<a data-action="log" href="javascript:void(0);" class="action btn btn-default btn-xs"><span class="glyphicon glyphicon-list"></span></a>
-						<a data-action="push" href="javascript:void(0);" class="action pull-right">{{b}}</a>
+            <a data-action="push" href="javascript:void(0);" class="action btn btn-primary btn-xs"><span class="glyphicon glyphicon-upload"></span></a>
+						<a data-action="branch" href="javascript:void(0);" class="action pull-right">{{b}}</a>
 					</div>
 					<div class="panel-body">
 						<div class="row">
