--- a/pub/index.html
+++ b/pub/index.html
@@ -429,6 +429,7 @@
 						<strong>{{r}}</strong>
 						<a data-action="log" href="javascript:void(0);" class="action btn btn-default btn-xs"><span class="glyphicon glyphicon-list"></span></a>
             <a data-action="push" href="javascript:void(0);" class="action btn btn-primary btn-xs"><span class="glyphicon glyphicon-upload"></span></a>
+            <a data-action="fetch" href="javascript:void(0);" class="action btn btn-default btn-xs"><span class="glyphicon glyphicon-download-alt"></span></a>
 						<a data-action="branch" href="javascript:void(0);" class="action pull-right">{{b}}</a>
 					</div>
 					<div class="panel-body">
