--- a/pub/index.html
+++ b/pub/index.html
@@ -164,6 +164,12 @@
             </div>
             <div class="container-fluid">
               <div class="row-fluid">
+                <div class="col-sm-3 col-xs-12"><a class="btn btn-default" href="javascript:add();">Import <span class="glyphicon glyphicon-certificate"></span></a></div>
+                <div class="col-sm-9 col-xs-12 import hidden"><textarea style="resize:none;margin:1em 0;" placeholder="Private Key" rows="10" class="form-control"></textarea><a class="btn btn-primary btn-block" href="javascript:save();">Save</a></div>
+              </div>
+            </div>
+            <div class="container-fluid">
+              <div class="row-fluid">
                 <div class="col-sm-3 col-xs-12"><a class="btn btn-default" href="javascript:logs();">Logs <span class="glyphicon glyphicon-list-alt"></span></a></div>
                 <div class="col-sm-9 col-xs-12 log"></div>
               </div>
