--- a/pub/index.html
+++ b/pub/index.html
@@ -82,11 +82,11 @@
   </div>
   <div id="lists" class="row-fluid">
     <div id="audio-edit" class="col-xs-12"></div>
-    <div class="col-sm-8">
+    <div class="col-xs-12 col-sm-8">
       <h5></h5>
       <div id="r" class="list-group"></div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-sm-4">
       <h5><span class="glyphicon glyphicon-list"></span> <span id="playlist"></span></h5>
       <div id="p" class="list-group"></div>
     </div>
@@ -100,10 +100,10 @@
   <br />
   <div class="row">
 	  <div class="col-sm-9">
-      <div class="col-sm-2">
+      <div class="col-xs-4 col-sm-2 pbo">
         <a class="btn btn-default btn-block mustache" data-d="#audio-edit" data-t="#tpl-empty"><span class="glyphicon glyphicon-remove-sign"></span></a>
       </div>
-      <div class="col-sm-6">
+      <div class="col-xs-8 col-sm-6 pbo">
       <form id="audio-save" method="POST">
         <input type="hidden" name="req" value="edit" />
         <input type="hidden" name="f" value="{{f}}" />
@@ -111,12 +111,12 @@
         <input type="text" class="form-control" name="n" value="{{n}}" placeholder="Name" />
       </form>
       </div>
-      <div class="col-sm-4">
+      <div class="col-xs-6 col-sm-4">
         <button class="ajax btn btn-primary btn-block" data-af="#audio-save" data-au="api.php?app=audio" data-dd="#audio-edit" data-dt="#tpl-empty"><span class="glyphicon glyphicon-floppy-disk"></span> Save</button>
       </div>
        
     </div>
-	  <div class="col-sm-3">
+	  <div class="col-xs-6 col-sm-3">
       <form id="audio-trash" method="POST" data-af="#audio-trash" data-au="api.php?app=audio" data-dd="#audio-edit" data-dt="#tpl-empty">
         <input type="hidden" name="req" value="trash" />
         <input type="hidden" name="f" value="{{f}}" />
