--- a/pub/v2.html
+++ b/pub/v2.html
@@ -56,6 +56,7 @@
         "dg":"home.html",
         "dt":"#tpl-home",
         "fd":"#app",
+        "fg":"home.html",
         "ft":"#tpl-login",
       };
     </script>
